--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,13 @@
 [package]
 name = "prcs"
 version = "0.1.0"
+edition = "2018"
+license = "MIT"
+repository = "https://github.com/jeysal/prcs"
 authors = ["Tim Seckinger <seckinger.tim@gmail.com>"]
 description = "The Swiss Army knife for running processes"
-edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+categories = ["command-line-utilities"]
+keywords = ["CLI", "process", "command", "utility"]
 
 [dependencies]
 clap = "3.0.0-beta.2"
