--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ keywords = ["CLI", "process", "command", "utility"]
 [dependencies]
 clap = "3.0.0-beta.2"
 nom = "^6.1.0"
+signal-hook = "0.3.9"
 
 [dev-dependencies]
 insta = "^1.7.1"
